Blogs page added

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-SECRET_KEY="qwertyuiopasdfghjklzxcvbnm"
+SECRET_KEY="qwertyuiopasdfghjklzxcvbnm",
+MONGODB_URI = "mongodb+srv://anshinfotech1:f8QiKYpsDE53Cs6l@cluster0.iqayfbm.mongodb.net/ait"
