Update mongodb string

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 SECRET_KEY="qwertyuiopasdfghjklzxcvbnm",
-MONGODB_URI = "mongodb+srv://anshinfotech1:f8QiKYpsDE53Cs6l@cluster0.iqayfbm.mongodb.net/ait"
+MONGODB_URI = "mongodb+srv://anshinfotech1:gL3NPjlZtWrZMwW6@cluster0.iqayfbm.mongodb.net/"
