--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 SECRET_KEY="qwertyuiopasdfghjklzxcvbnm",
-MONGODB_URI = "mongodb+srv://anshinfotech1:2OlwaMaVm98NG7Tj@cluster0.iqayfbm.mongodb.net/"
+MONGODB_URI = "mongodb+srv://anshinfotech1:uIvxGPWh298lnOMI@cluster0.iqayfbm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
